fix problem align items of logo normal and insert all i in cta inside ancora tag

--- a/css/style.css
+++ b/css/style.css
@@ -89,7 +89,7 @@ header .input-group i {
     width: 100%;
 }
 
-.cta i:last-child {
+.cta a:last-child i {
     color:  var(--bell-color);
 }
 
